[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Sprites/Player/Idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Player/Fall.png" type="Texture" id=2]
[ext_resource path="res://Src/Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Player/Jump.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player/Run.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/DJump.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/Jump.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5.5, 10.5 )

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
z_index = 10
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 14 )
animation = "Idle"
frame = 3
playing = true
offset = Vector2( 0, -6 )

[node name="Hull" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, -0.5 )
shape = SubResource( 15 )

[node name="Visualizer" type="Polygon2D" parent="Hull"]
visible = false
modulate = Color( 0.0463562, 0.209327, 0.382813, 1 )
material = SubResource( 16 )
polygon = PoolVector2Array( 5.5, -10.5, 5.5, 10.5, -5.5, 10.5, -5.5, -10.5 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DoubleJumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SpikeCollision" type="Area2D" parent="."]
visible = false
position = Vector2( 2, -0.5 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikeCollision"]
position = Vector2( 0.5, 0 )
shape = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlatformCollision" type="Area2D" parent="."]
visible = false
position = Vector2( 2, -0.5 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformCollision"]
position = Vector2( 0.5, 0 )
shape = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.25, 0.25 )

[connection signal="body_entered" from="SpikeCollision" to="." method="_on_SpikeCollision_body_entered"]
[connection signal="body_entered" from="PlatformCollision" to="." method="_on_PlatformCollision_body_entered"]
[connection signal="body_exited" from="PlatformCollision" to="." method="_on_PlatformCollision_body_exited"]
